Fix overflow issue on song dropdown main pages

--- a/app/assets/stylesheets/components/_music_page.scss
+++ b/app/assets/stylesheets/components/_music_page.scss
@@ -17,6 +17,7 @@ body {
   background-color: #222;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .sidebar {
